--- a/styling/App.css
+++ b/styling/App.css
@@ -1,3 +1,7 @@
+#root {  margin: 0 auto;
+  text-align: center;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -54,15 +58,33 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.header h3 {
+  font-size: clamp;
+}
+
+.cardsContainer{
+ display: flex;
+ gap: 20px;
+ justify-content: space-between;
+ flex-wrap: wrap;
+}
+
+.cardsContainer img {
+  width: 275px;
+  height: 275px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.card {
+  background-color: #535bf2;
+  margin: 5px;
+  border-radius: 10px;
+  padding: 5px;
 }
